# hyperbridge

./: .dockerignore  .gitignore  .gitmodules  CLAUDE.md  CNAME  Cargo.toml  Dockerfile  README.md  \  prover.toml  rust-toolchain.toml  rustfmt.toml  sync-committee-devnet.yaml  test-config.toml
beefy/: Cargo.toml
beefy/naive/: Cargo.toml
beefy/naive/src/: byzantine.rs  host.rs  lib.rs  prover.rs
beefy/prover/: Cargo.toml
beefy/prover/src/: host.rs  lib.rs  prover.rs
beefy/src/: byzantine.rs  host.rs  lib.rs  prover.rs  redis_utils.rs  rsmq.rs
beefy/zk/: Cargo.toml  Nargo.toml  README.md
beefy/zk/artifacts/: kusama.json  polkadot.json  rococo.json
beefy/zk/kusama/: Nargo.toml  Prover.toml
beefy/zk/polkadot/: Nargo.toml  Prover.toml  Verifier.toml
beefy/zk/rococo/: Nargo.toml  Prover.toml  Verifier.toml
beefy/zk/src/: lib.rs  plonk.rs  prover.rs  tests.rs
bsc/: Cargo.toml
bsc/src/: byzantine.rs  host.rs  lib.rs  notification.rs
cli/: Cargo.toml
cli/src/: logging.rs
client/: Cargo.toml  README.md
client/abi/: EvmHost.json  Handler.json
client/pkg/: hyperclient.d.ts  hyperclient.js  hyperclient_bg.js  hyperclient_bg.wasm  hyperclient_bg.wasm.d.ts  package.json
client/src/: any.rs  internals.rs  lib.rs  main.rs  runtime.rs  streams.rs  types.rs
client/src/mock/: mod.rs  ping_module.rs  shared_types.rs
client/src/providers/: evm_chain.rs  global.rs  hyperbridge.rs  mod.rs  substrate.rs  substrate_chain.rs
client/src/tests/: mod.rs  std_test.rs  streams.rs
client/src/types/: handler.rs  ismp_host.rs  runtime.rs  shared_types.rs  token_faucet.rs  token_gateway.rs
client/wix/: main.wxs
config/: Cargo.toml
config/src/: lib.rs
consensus/: Cargo.toml
consensus/src/: lib.rs
fees/: Cargo.toml
fees/prisma/: schema.prisma
fees/src/: db.rs  lib.rs  mock.rs  tests.rs
fisherman/: Cargo.toml
fisherman/src/: lib.rs
grandpa/: Cargo.toml
grandpa/prover/: Cargo.toml
grandpa/prover/src/: lib.rs
grandpa/src/: byzantine.rs  consensus.rs  host.rs  lib.rs
grandpa/verifier/: Cargo.toml
grandpa/verifier/src/: lib.rs  state_machine.rs  tests.rs
integration-tests/: Cargo.toml
integration-tests/src/: bsc.rs  ethereum.rs  grandpa.rs  lib.rs  ping.rs  polygon.rs  substrate.rs  util.rs
ismp-assets/: Cargo.toml
ismp-assets/src/: lib.rs
ismp-demo/: Cargo.toml
ismp-demo/src/: lib.rs
ismp-testsuite/: Cargo.toml
ismp-testsuite/src/: lib.rs  mocks.rs  tests.rs
light-client-primitives/: Cargo.toml
light-client-primitives/src/: lib.rs  types.rs  util.rs
light-client-verifier/: Cargo.toml
light-client-verifier/src/: error.rs  lib.rs  light_client.rs
messaging/: Cargo.toml
messaging/src/: event_parser.rs  events.rs  lib.rs  retries.rs
messenger/: Cargo.toml
messenger/src/: main.rs  types.rs
messenger/src/types/: cross_chain_messenger.rs  ping_module.rs
op-host/: Cargo.toml  build.rs
op-host/abis/: FaultDisputeGame.json
op-host/src/: abi.rs  host.rs  lib.rs  tests.rs
op-host/src/abi/: dispute_game_factory.rs  fault_dispute_game.rs  l2_output_oracle.rs
pallet-ismp/: Cargo.toml
pallet-ismp/evm/: Cargo.toml
pallet-ismp/evm/solidity/: remappings.txt
pallet-ismp/evm/src/: abi.rs  lib.rs  mocks.rs  module.rs  precompiles.rs  tests.rs  weight.rs
pallet-ismp/primitives/: Cargo.toml
pallet-ismp/primitives/src/: lib.rs  mmr.rs
pallet-ismp/primitives/state-machine/: Cargo.toml
pallet-ismp/rpc/: Cargo.toml
pallet-ismp/rpc/src/: lib.rs
pallet-ismp/runtime-api/: Cargo.toml
pallet-ismp/runtime-api/src/: lib.rs
pallet-ismp/src/: benchmarking.rs  dispatcher.rs  errors.rs  events.rs  handlers.rs  host.rs  ismp_mocks.rs  lib.rs  mmr.rs  mock.rs  primitives.rs  router.rs  tests.rs  weight_info.rs
pallet-ismp/src/mmr/: mmr.rs  storage.rs  utils.rs
pallet-ismp/src/mocks/: ismp.rs  mod.rs
parachain/: .gitignore  Cargo.toml
parachain-consensus/: Cargo.toml
parachain-consensus/src/: consensus.rs  lib.rs
parachain/chainspec/: gargantua.json  gargantua.new.json  gargantua.paseo.json  gargantua.plain.json  gargantua.rococo.json  gargantuan-raw.json  gargantuan.json  messier.json  nexus.json  paseo.raw.json
parachain/inherent/: Cargo.toml
parachain/inherent/src/: lib.rs
parachain/integration-test/: Cargo.toml
parachain/integration-test/src/: lib.rs
parachain/integration-tests/: Cargo.toml
parachain/integration-tests/src/: collator_manager_integration_test.rs  lib.rs
parachain/modules/relayer-fee-tracker/: Cargo.toml
parachain/modules/relayer-fees/: Cargo.toml
parachain/modules/state-machine/: Cargo.toml
parachain/modules/state-machine-freezer/: Cargo.toml
parachain/modules/state-machine-manager/: Cargo.toml
parachain/modules/sync-committee/: Cargo.toml
parachain/node/: Cargo.toml  build.rs
parachain/node/fisherman/: Cargo.toml
parachain/node/src/: chain_spec.rs  cli.rs  client.rs  command.rs  main.rs  rpc.rs  runtime_api.rs  (+2 more)
parachain/runtime/: Cargo.toml
parachain/runtime-api/: Cargo.toml
parachain/simtests/: Cargo.toml
parachain/src/: byzantine.rs  codegen.rs  consensus.rs  extrinsic.rs  host.rs  lib.rs  notifications.rs  provider.rs  state_machine_notifications.rs  testing.rs
parachain/xcm-runtime-integration-tests/: Cargo.toml
payments/: Cargo.toml
payments/prisma/: schema.prisma
payments/src/: db.rs  lib.rs  mock.rs  tests.rs
primitives/: Cargo.toml
primitives/src/: config.rs  consensus_types.rs  constants.rs  derived_types.rs  domains.rs  error.rs  helpers.rs  lib.rs  mocks.rs  serde.rs  types.rs  util.rs
prover/: Cargo.toml
prover/src/: error.rs  lib.rs  routes.rs  test.rs
relayer/: Cargo.toml
relayer-fisherman/: Cargo.toml
relayer-fisherman/src/: main.rs
relayer/bins/: fisherman.rs  prover.rs  relayer.rs
relayer/src/: any.rs  cli.rs  config.rs  fees.rs  lib.rs  logging.rs  main.rs  monitor.rs  subcommand.rs  tx_payment.rs
runtime-api/: Cargo.toml
runtime-api/src/: lib.rs
solana/: .gitignore  Cargo.toml  README.md  SECURITY.md
sync-committee-prover/: Cargo.toml
sync-committee-prover/src/: error.rs  lib.rs  routes.rs  test.rs
(+2788 files in other folders)
