[workspace]
resolver = "2"
members = [
    # runtime
    "parachain/runtimes/gargantua",
    "parachain/runtimes/nexus",

    # node
    "parachain/node",

    # ismp
    "modules/ismp/core",
    "modules/pallets/ismp",
    "modules/pallets/relayer",
    "modules/pallets/fishermen",
    "modules/pallets/host-executive",
    "modules/pallets/ismp/rpc",
    "modules/pallets/ismp/runtime-api",
    "modules/pallets/demo",
    "modules/pallets/testsuite",
    "modules/pallets/call-decompressor",
    "modules/pallets/xcm-gateway",
    "modules/pallets/token-governor",
    "modules/pallets/token-gateway",
    "modules/pallets/token-gateway/primitives",
    "modules/pallets/token-gateway-inspector",
    "modules/pallets/hyperbridge",
    "modules/pallets/state-coprocessor",
    "modules/ismp/clients/sync-committee",
    "modules/ismp/clients/casper-ffg",
    "modules/ismp/clients/parachain/client",
    "modules/ismp/clients/parachain/inherent",
    "modules/ismp/clients/parachain/runtime-api",
    "modules/ismp/clients/arbitrum",
    "modules/ismp/clients/optimism",
    "modules/ismp/clients/bsc",
    "modules/ismp/clients/grandpa",
    "modules/ismp/testsuite",
    "modules/ismp/clients/ismp-arbitrum",
    "modules/ismp/clients/ismp-optimism",
    "modules/ismp/clients/polygon",
    "modules/ismp/clients/tendermint",
    "modules/pallets/collator-manager",

    # cryptography
    "modules/consensus/sync-committee/prover",
    "modules/consensus/sync-committee/verifier",
    "modules/consensus/sync-committee/primitives",
    "modules/consensus/beefy/primitives",
    "modules/consensus/beefy/prover",
    "modules/consensus/geth-primitives",
    "modules/consensus/bsc/verifier",
    "modules/consensus/bsc/prover",
    "modules/consensus/grandpa/prover",
    "modules/consensus/grandpa/primitives",
    "modules/consensus/grandpa/verifier",
    "modules/consensus/tendermint/verifier",
    "modules/consensus/tendermint/prover",
    "modules/consensus/tendermint/primitives",
    "modules/consensus/tendermint/ics23-primitives",
    "modules/trees/ethereum",
    "modules/pallets/mmr",
    "modules/pallets/mmr/primitives",
    "modules/pallets/mmr/gadget",
    "modules/pallets/mmr/runtime-api",
    "modules/pallets/mmr/rpc",
    "modules/ismp/state-machines/evm",
    "modules/ismp/state-machines/substrate",
    "modules/ismp/state-machines/hyperbridge",
    "modules/pallets/consensus-incentives",
    "modules/pallets/messaging-fees",

    # evm stuff
    "evm/integration-tests",
    "evm/abi",

    # hyperclient
    "modules/hyperclient",

    # simnode
    "parachain/simtests",

    # integration tests
    "parachain/integration-tests",

    # Utilities
    "modules/utils/subxt",
    "modules/utils/serde",
    "modules/utils/crypto",

    # tesseract
    "tesseract/messaging/primitives",
    "tesseract/messaging/messaging",
    "tesseract/messaging/substrate",
    "tesseract/messaging/relayer",
    "tesseract/messaging/evm",
    "tesseract/messaging/evm-tendermint",
    "tesseract/messaging/fees",
    "tesseract/messaging/fees/prisma-cli",
    "tesseract/messaging/telemetry",
    "tesseract/messaging/config",
    "tesseract/messaging/fisherman",
    # "tesseract/integration-test",

    "tesseract/consensus/arb-host",
    "tesseract/consensus/op-host",
    "tesseract/consensus/bsc",
    "tesseract/consensus/sync-committee",
    "tesseract/consensus/grandpa",
    "tesseract/consensus/integration-tests",
    "tesseract/consensus/beefy",
    "tesseract/consensus/beefy/zk",
    "tesseract/consensus/relayer",
    "tesseract/consensus/polygon",
    "tesseract/consensus/tendermint",


    # Airdrop
    "modules/pallets/bridge-drop",
]

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.14.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell"]
# A GitHub repo to push Homebrew formulas to
tap = "polytope-labs/hyperbridge"
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu"]
# The archive format to use for non-windows builds (defaults .tar.xz)
unix-archive = ".tar.gz"
# Publish jobs to run in CI
pr-run-mode = "upload"
# Skip checking whether the specified configuration files are up to date
allow-dirty = ["ci"]
# Whether to install an updater program
install-updater = false

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[profile.release]
strip = true

[workspace.dependencies]
polkadot-sdk = { version = "=2506.0.0", default-features = false }

# crates that can't be used in polkadot-sdk
sp-weights = { version = "32.0.0", default-features = false }
sp-core = { version = "37.0.0", default-features = false }
frame-benchmarking = { version = "41.0.0", default-features = false }
sp-io = { version = "41.0.0", default-features = false }
cumulus-pallet-parachain-system = { version = "0.21.0", default-features = false }
substrate-wasm-builder = "27.0.0"
sc-service = "0.53.0"
sc-tracing = "40.0.0"
sp-api-proc-macro = "23.0.0"
sp-consensus-beefy = { version = "25.0.0" }
sp-crypto-hashing = "0.1.0"
xcm-simulator-example = "=20.0.1"

# supporting polkadot-sdk crates
sc-simnode = { version = "2506.0.0" }
simnode-runtime-api = { version = "2506.0.0", default-features = false }

# crates.io
serde = { version = "1", default-features = false }
trie-db = { version = "0.30.0", default-features = false }
hash-db = { version = "0.16.0", default-features = false }
memory-db = { version = "0.32.0", default-features = false }
log = { version = "0.4", default-features = false }
anyhow = { version = "1.0", default-features = false }
derive_more = { version = "1.0", default-features = false }
thiserror = { version = "2", default-features = false }
alloy-rlp = { version = "0.3.7", default-features = false }
alloy-rlp-derive = "0.3.7"
alloy-sol-macro = "0.7.7"
alloy-sol-types = { version = "0.7.7", default-features = false }
json = { package = "serde_json", version = "1.0.99", default-features = false }
hex = { version = "0.4.3", default-features = false }
hex-literal = "0.4.1"
rlp = { version = "0.6.1", default-features = false }
primitive-types = { version = "0.13.1", default-features = false }
subxt = { version = "0.42.1", default-features = false }
subxt-core = { version = "0.42.1", default-features = false }
tokio = { version = "1.37.0" }
tokio-stream = { version = "0.1.15" }
jsonrpsee = { version = "0.24" }
jsonrpsee-core = { version = "0.24" }
rsmq_async = { git = "https://github.com/polytope-labs/rsmq-async-rs.git", rev = "564f0af49e1a82ec8fb4dbb739eade5a7486b674" }
tracing = "0.1.40"
dotenv = "0.15.0"
futures = "0.3.28"
async-trait = "0.1.53"
reqwest-chain = "0.1.0"
reqwest-middleware = "0.2.4"
reqwest = { version="0.11.14", features=["json"]}
prost = { version = "0.13.0", default-features = false }
impl-trait-for-tuples = "0.2.3"

# arkworks
ark-ec = { version = "0.4.2", default-features = false }
bls = { package = "bls_on_arkworks", version = "0.2.2", default-features = false }

# tendermint/cometbft
cometbft = { git = "https://github.com/cometbft/cometbft-rs",  rev = "ac3db79c5807cd1d0b8b14a7b8199b8d79d6408d", default-features = false, features = ["secp256k1"]}
cometbft-rpc = { git = "https://github.com/cometbft/cometbft-rs", package = "cometbft-rpc", features = ["http-client", "secp256k1"], rev = "ac3db79c5807cd1d0b8b14a7b8199b8d79d6408d"}
cometbft-proto = { git = "https://github.com/cometbft/cometbft-rs", package = "cometbft-proto", rev = "ac3db79c5807cd1d0b8b14a7b8199b8d79d6408d", default-features = false }
cometbft-light-client-verifier = { git = "https://github.com/cometbft/cometbft-rs", package = "cometbft-light-client-verifier", rev = "ac3db79c5807cd1d0b8b14a7b8199b8d79d6408d", default-features = false }
ics23 = { version = "0.12.0", default-features = false }
ibc = { version = "0.57.0", default-features = false }
ibc-proto = { version = "0.52.0", default-features = false, package = "ibc-proto"}

# published crates
ismp = { version = "2506.1.0", path = "./modules/ismp/core", default-features = false }
serde-hex-utils = { version = "0.1.0", path = "modules/utils/serde", default-features = false }
crypto-utils = { version = "0.1.0", path = "modules/utils/crypto", default-features = false }
grandpa-verifier-primitives = { version = "2506.1.0", path = "./modules/consensus/grandpa/primitives", default-features = false }
grandpa-verifier = { version = "2506.1.0", path = "./modules/consensus/grandpa/verifier", default-features = false }
ismp-grandpa = { version = "2506.1.0", path = "./modules/ismp/clients/grandpa", default-features = false }
ismp-parachain = { version = "2506.1.0", path = "./modules/ismp/clients/parachain/client", default-features = false }
ismp-parachain-inherent = { version = "2506.1.0", path = "./modules/ismp/clients/parachain/inherent" }
ismp-parachain-runtime-api = { version = "2506.0.0", path = "./modules/ismp/clients/parachain/runtime-api", default-features = false }
pallet-ismp = { version = "2506.1.0", path = "modules/pallets/ismp", default-features = false }
pallet-ismp-rpc = { version = "2506.1.0", path = "modules/pallets/ismp/rpc" }
pallet-ismp-runtime-api = { version = "2506.1.0", path = "modules/pallets/ismp/runtime-api", default-features = false }
pallet-hyperbridge = { version = "2506.1.1", path = "modules/pallets/hyperbridge", default-features = false }
pallet-token-gateway = { version = "2506.1.0", path = "modules/pallets/token-gateway", default-features = false }
token-gateway-primitives = { version = "2506.1.0", path = "modules/pallets/token-gateway/primitives", default-features = false }
substrate-state-machine = { version = "2506.1.0", path = "modules/ismp/state-machines/substrate", default-features = false }

# local crates
ismp-testsuite = { path = "./modules/ismp/testsuite" }
ismp-solidity-abi = { path = "./evm/abi", default-features = false }
simnode-tests = { path = "parachain/simtests" }
integration-tests = { path = "parachain/integration-tests" }
hyperclient = { path = "modules/hyperclient", default-features = false }
subxt-utils = { path = "modules/utils/subxt", default-features = false }

# consensus provers & verifiers
beefy-verifier-primitives = { path = "./modules/consensus/beefy/primitives", default-features = false }
beefy-prover = { path = "./modules/consensus/beefy/prover" }
bsc-prover = { path = "./modules/consensus/bsc/prover" }
bsc-verifier = { path = "./modules/consensus/bsc/verifier", default-features = false }
geth-primitives = { path = "./modules/consensus/geth-primitives", default-features = false }
sync-committee-primitives = { path = "./modules/consensus/sync-committee/primitives", default-features = false }
sync-committee-prover = { path = "./modules/consensus/sync-committee/prover" }
sync-committee-verifier = { path = "./modules/consensus/sync-committee/verifier", default-features = false }
grandpa-prover = { path = "./modules/consensus/grandpa/prover" }
tendermint-verifier = { path = "./modules/consensus/tendermint/verifier", default-features = false }
tendermint-primitives = { path = "./modules/consensus/tendermint/primitives", default-features = false }
tendermint-prover = { path = "./modules/consensus/tendermint/prover", default-features = false }
tendermint-ics23-primitives = { path = "./modules/consensus/tendermint/ics23-primitives", default-features = false }

# consensus clients
ismp-bsc = { path = "./modules/ismp/clients/bsc", default-features = false }
ismp-sync-committee = { path = "./modules/ismp/clients/sync-committee", default-features = false }
arbitrum-verifier = { path = "./modules/ismp/clients/arbitrum", default-features = false }
op-verifier = { path = "./modules/ismp/clients/optimism", default-features = false }
ismp-arbitrum = { path = "modules/ismp/clients/ismp-arbitrum", default-features = false }
ismp-optimism = { path = "modules/ismp/clients/ismp-optimism", default-features = false }
ismp-polygon = { path = "modules/ismp/clients/polygon", default-features = false }
ismp-tendermint = { path = "modules/ismp/clients/tendermint", default-features = false }

# state machine clients
evm-state-machine = { path = "./modules/ismp/state-machines/evm", default-features = false }
hyperbridge-client-machine = { path = "modules/ismp/state-machines/hyperbridge", default-features = false }

# ismp modules
pallet-fishermen = { path = "modules/pallets/fishermen", default-features = false }
pallet-ismp-demo = { path = "modules/pallets/demo", default-features = false }
pallet-ismp-relayer = { path = "modules/pallets/relayer", default-features = false }
pallet-ismp-host-executive = { path = "modules/pallets/host-executive", default-features = false }
pallet-call-decompressor = { path = "modules/pallets/call-decompressor", default-features = false }
pallet-consensus-incentives = { path = "modules/pallets/consensus-incentives", default-features = false }
pallet-messaging-fees= { path = "modules/pallets/messaging-fees", default-features = false }
pallet-collator-manager = { path = "modules/pallets/collator-manager", default-features = false }
pallet-xcm-gateway = { path = "modules/pallets/xcm-gateway", default-features = false }
pallet-token-governor = { path = "modules/pallets/token-governor", default-features = false }
pallet-state-coprocessor = { path = "modules/pallets/state-coprocessor", default-features = false }
pallet-token-gateway-inspector = { path = "modules/pallets/token-gateway-inspector", default-features = false }
pallet-bridge-airdrop = { path = "modules/pallets/bridge-drop", default-features = false }

# merkle trees
ethereum-triedb = { version = "0.1.1", path = "./modules/trees/ethereum", default-features = false }
pallet-mmr-tree = { path = "modules/pallets/mmr", default-features = false }
pallet-mmr-rpc = { path = "modules/pallets/mmr/rpc", default-features = false }
mmr-primitives = { path = "modules/pallets/mmr/primitives", default-features = false }
pallet-mmr-runtime-api = { path = "modules/pallets/mmr/runtime-api", default-features = false }
mmr-gadget = { path = "modules/pallets/mmr/gadget" }

# runtimes
gargantua-runtime = { path = "./parachain/runtimes/gargantua", default-features = false }
nexus-runtime = { path = "./parachain/runtimes/nexus", default-features = false }

# tesseract
tesseract-primitives = { path = "tesseract/messaging/primitives" }
tesseract-messaging = { path = "tesseract/messaging/messaging" }
tesseract-fisherman = { path = "tesseract/messaging/fisherman" }
tesseract-substrate = { path = "tesseract/messaging/substrate" }
tesseract-evm = { path = "tesseract/messaging/evm" }
tesseract-evm-tendermint = { path = "tesseract/messaging/evm-tendermint" }
tesseract = { path = "tesseract/messaging/relayer" }
transaction-fees = { path = "tesseract/messaging/fees" }
telemetry-server = { path = "tesseract/messaging/telemetry" }
tesseract-config = { path = "tesseract/messaging/config" }

# tesseract consensus
arb-host = { path = "tesseract/consensus/arb-host" }
op-host = { path = "tesseract/consensus/op-host" }
tesseract-beefy = { path = "tesseract/consensus/beefy" }
tesseract-bsc = { path = "tesseract/consensus/bsc" }
tesseract-integration-tests = { path = "tesseract/consensus/integration-tests" }
tesseract-sync-committee = { path = "tesseract/consensus/sync-committee" }
tesseract-grandpa = { path = "tesseract/consensus/grandpa" }
tesseract-consensus = { path = "tesseract/consensus/relayer" }
tesseract-polygon = { path = "tesseract/consensus/polygon" }
tesseract-tendermint = { path = "tesseract/consensus/tendermint" }


[workspace.dependencies.codec]
package = "parity-scale-codec"
version = "3.7"
default-features = false
features = ["derive"]

[workspace.dependencies.ethabi]
version = "18.0.0"
default-features = false
features = ["rlp", "parity-codec"]

[workspace.dependencies.ethers]
git = "https://github.com/polytope-labs/ethers-rs"
rev = "45239225c50247e049892125d281442c084a2a92"
features = ["ethers-solc"]
default-features = false

[workspace.dependencies.ethers-core]
git = "https://github.com/polytope-labs/ethers-rs"
rev = "45239225c50247e049892125d281442c084a2a92"
default-features = false

[workspace.dependencies.ethers-contract-abigen]
git = "https://github.com/polytope-labs/ethers-rs"
rev = "45239225c50247e049892125d281442c084a2a92"

[workspace.dependencies.forge-testsuite]
git = "https://github.com/polytope-labs/forge-testsuite"
rev = "ff9fdc69c0200e3bb471198aa44ba933e043b78d"

[workspace.dependencies.foundry-evm]
git = "https://github.com/polytope-labs/foundry"
rev = "1db7f747d7033a760c747fabbeef706576c88e34"

[workspace.dependencies.merkle-mountain-range]
package = "ckb-merkle-mountain-range"
version = "0.5.2"
default-features = false

[workspace.dependencies.alloy-primitives]
version = "0.7.7"
default-features = false
features = ["rlp"]

[workspace.dependencies.scale-info]
version = "2.1.1"
default-features = false
features = ["derive"]

[workspace.dependencies.reconnecting-jsonrpsee-ws-client]
version = "0.5.0"
default-features = false
