[workspace]
resolver = "2"
members = [
    # runtime
    "parachain/runtimes/gargantua",
    "parachain/runtimes/nexus",

    # node
    "parachain/node",

    # ismp
    "modules/ismp/core",
    "modules/pallets/ismp",
    "modules/pallets/relayer",
    "modules/pallets/fishermen",
    "modules/pallets/host-executive",
    "modules/pallets/ismp/rpc",
    "modules/pallets/ismp/runtime-api",
    "modules/pallets/demo",
    "modules/pallets/testsuite",
    "modules/pallets/call-decompressor",
    "modules/pallets/xcm-gateway",
    "modules/pallets/token-governor",
    "modules/pallets/token-gateway",
    "modules/pallets/token-gateway/primitives",
    "modules/pallets/token-gateway-inspector",
    "modules/pallets/hyperbridge",
    "modules/pallets/state-coprocessor",
    "modules/ismp/clients/sync-committee",
    "modules/ismp/clients/casper-ffg",
    "modules/ismp/clients/parachain/client",
    "modules/ismp/clients/parachain/inherent",
    "modules/ismp/clients/parachain/runtime-api",
    "modules/ismp/clients/arbitrum",
    "modules/ismp/clients/optimism",
    "modules/ismp/clients/bsc",
    "modules/ismp/clients/grandpa",
    "modules/ismp/testsuite",

    # cryptography
    "modules/consensus/sync-committee/prover",
    "modules/consensus/sync-committee/verifier",
    "modules/consensus/sync-committee/primitives",
    "modules/consensus/beefy/primitives",
    "modules/consensus/beefy/prover",
    "modules/consensus/geth-primitives",
    "modules/consensus/bsc/verifier",
    "modules/consensus/bsc/prover",
    "modules/consensus/grandpa/prover",
    "modules/consensus/grandpa/primitives",
    "modules/consensus/grandpa/verifier",
    "modules/trees/ethereum",
    "modules/pallets/mmr",
    "modules/pallets/mmr/primitives",
    "modules/pallets/mmr/gadget",
    "modules/pallets/mmr/runtime-api",
    "modules/pallets/mmr/rpc",
    "modules/ismp/state-machines/evm",
    "modules/ismp/state-machines/substrate",
    "modules/ismp/state-machines/hyperbridge",

    # evm stuff
    "evm/integration-tests",
    "evm/abi",

    # hyperclient
    "modules/hyperclient",

    # simnode
    "parachain/simtests",

    # Utilities
    "modules/utils/subxt",
    "modules/utils/serde",

    # tesseract
    "tesseract/primitives",
    "tesseract/messaging",
    "tesseract/substrate",
    "tesseract/relayer",
    "tesseract/evm",
    "tesseract/fees",
    "tesseract/fees/prisma-cli",
    "tesseract/telemetry",
    "tesseract/config",
    "tesseract/fisherman",
    # "tesseract/integration-test",
]

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.14.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell"]
# A GitHub repo to push Homebrew formulas to
tap = "polytope-labs/hyperbridge"
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu"]
# The archive format to use for non-windows builds (defaults .tar.xz)
unix-archive = ".tar.gz"
# Publish jobs to run in CI
pr-run-mode = "upload"
# Skip checking whether the specified configuration files are up to date
allow-dirty = ["ci"]
# Whether to install an updater program
install-updater = false

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[profile.release]
strip = true

[workspace.dependencies]
polkadot-sdk = { git ="https://github.com/paritytech/polkadot-sdk", branch = "stable2409", default-features = false }

# crates that can't be used in polkadot-sdk
sp-core = { git ="https://github.com/paritytech/polkadot-sdk", branch = "stable2409", default-features = false }
frame-benchmarking = { git ="https://github.com/paritytech/polkadot-sdk", branch = "stable2409", default-features = false }
sp-io = { git ="https://github.com/paritytech/polkadot-sdk", branch = "stable2409", default-features = false }
cumulus-pallet-parachain-system = { git ="https://github.com/paritytech/polkadot-sdk", branch = "stable2409", default-features = false }
substrate-wasm-builder = { git ="https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
sc-service = { git ="https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
sc-tracing = { git ="https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
xcm-simulator-example = { git ="https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }

# supporting polkadot-sdk crates
orml-xcm-support = { git = "https://github.com/bifrost-io/open-runtime-module-library", branch = "release-polkadot-stable2409", default-features = false }
orml-traits = { git = "https://github.com/bifrost-io/open-runtime-module-library", branch = "release-polkadot-stable2409", default-features = false }
sc-simnode = { git = "https://github.com/polytope-labs/sc-simnode", rev = "595a058d5c8574587c00527bb42eb48d413ec497" }
simnode-runtime-api = { git = "https://github.com/polytope-labs/sc-simnode", rev = "595a058d5c8574587c00527bb42eb48d413ec497", default-features = false }

# crates.io
serde = { version = "1", default-features = false }
trie-db = { version = "0.29.0", default-features = false }
hash-db = { version = "0.16.0", default-features = false }
memory-db = { version = "0.32.0", default-features = false }
log = { version = "0.4", default-features = false }
anyhow = { version = "1.0", default-features = false }
derive_more = { version = "1.0", default-features = false }
thiserror = { version = "2", default-features = false }
alloy-rlp = { version = "0.3.7", default-features = false }
alloy-rlp-derive = "0.3.7"
alloy-sol-macro = "0.7.7"
alloy-sol-types = { version = "0.7.7", default-features = false }
json = { package = "serde_json", version = "1.0.99", default-features = false }
hex = { version = "0.4.3", default-features = false }
hex-literal = "0.4.1"
rlp = { version = "0.5.1", default-features = false }
primitive-types = { version = "0.12.2", default-features = false }
subxt = { version = "0.30.1", default-features = false }
tokio = { version = "1.37.0" }
tokio-stream = { version = "0.1.15" }
jsonrpsee = { version = "0.24" }
jsonrpsee-core = { version = "0.24" }

# arkworks
ark-ec = { version = "0.4.2", default-features = false }
bls = { package = "bls_on_arkworks", version = "0.2.2", default-features = false }

# published crates
ismp = { version = "0.2.2", path = "./modules/ismp/core", default-features = false }
serde-hex-utils = { version = "0.1.0", path = "modules/utils/serde", default-features = false }
grandpa-verifier-primitives = { version = "0.2.0", path = "./modules/consensus/grandpa/primitives", default-features = false }
grandpa-verifier = { version = "0.2.0", path = "./modules/consensus/grandpa/verifier", default-features = false }
ismp-grandpa = { version = "16.0.0", path = "./modules/ismp/clients/grandpa", default-features = false }
ismp-parachain = { version = "16.2.0", path = "./modules/ismp/clients/parachain/client", default-features = false }
ismp-parachain-inherent = { version = "16.1.0", path = "./modules/ismp/clients/parachain/inherent" }
ismp-parachain-runtime-api = { version = "16.0.0", path = "./modules/ismp/clients/parachain/runtime-api", default-features = false }
pallet-ismp = { version = "16.1.0", path = "modules/pallets/ismp", default-features = false }
pallet-ismp-rpc = { version = "16.0.0", path = "modules/pallets/ismp/rpc" }
pallet-ismp-runtime-api = { version = "16.0.0", path = "modules/pallets/ismp/runtime-api", default-features = false }
pallet-hyperbridge = { version = "16.0.0", path = "modules/pallets/hyperbridge", default-features = false }
pallet-token-gateway = { version = "16.0.0", path = "modules/pallets/token-gateway", default-features = false }
token-gateway-primitives = { version = "16.0.0", path = "modules/pallets/token-gateway/primitives", default-features = false }
substrate-state-machine = { version = "16.0.0", path = "modules/ismp/state-machines/substrate", default-features = false }

# local crates
ismp-testsuite = { path = "./modules/ismp/testsuite" }
ismp-solidity-abi = { path = "./evm/abi", default-features = false }
simnode-tests = { path = "parachain/simtests" }
hyperclient = { path = "modules/hyperclient", default-features = false }
subxt-utils = { path = "modules/utils/subxt", default-features = false }

# consensus provers & verifiers
beefy-verifier-primitives = { path = "./modules/consensus/beefy/primitives", default-features = false }
beefy-prover = { path = "./modules/consensus/beefy/prover" }
bsc-prover = { path = "./modules/consensus/bsc/prover" }
bsc-verifier = { path = "./modules/consensus/bsc/verifier", default-features = false }
geth-primitives = { path = "./modules/consensus/geth-primitives", default-features = false }
sync-committee-primitives = { path = "./modules/consensus/sync-committee/primitives", default-features = false }
sync-committee-prover = { path = "./modules/consensus/sync-committee/prover" }
sync-committee-verifier = { path = "./modules/consensus/sync-committee/verifier", default-features = false }
grandpa-prover = { path = "./modules/consensus/grandpa/prover" }

# consensus clients
ismp-bsc = { path = "./modules/ismp/clients/bsc", default-features = false }
ismp-sync-committee = { path = "./modules/ismp/clients/sync-committee", default-features = false }
arbitrum-verifier = { path = "./modules/ismp/clients/arbitrum", default-features = false }
op-verifier = { path = "./modules/ismp/clients/optimism", default-features = false }

# state machine clients
evm-state-machine = { path = "./modules/ismp/state-machines/evm", default-features = false }
hyperbridge-client-machine = { path = "modules/ismp/state-machines/hyperbridge", default-features = false }

# ismp modules
pallet-fishermen = { path = "modules/pallets/fishermen", default-features = false }
pallet-ismp-demo = { path = "modules/pallets/demo", default-features = false }
pallet-ismp-relayer = { path = "modules/pallets/relayer", default-features = false }
pallet-ismp-host-executive = { path = "modules/pallets/host-executive", default-features = false }
pallet-call-decompressor = { path = "modules/pallets/call-decompressor", default-features = false }
pallet-xcm-gateway = { path = "modules/pallets/xcm-gateway", default-features = false }
pallet-token-governor = { path = "modules/pallets/token-governor", default-features = false }
pallet-state-coprocessor = { path = "modules/pallets/state-coprocessor", default-features = false }
pallet-token-gateway-inspector = { path = "modules/pallets/token-gateway-inspector", default-features = false }

# merkle trees
ethereum-triedb = { version = "0.1.1", path = "./modules/trees/ethereum", default-features = false }
pallet-mmr-tree = { path = "modules/pallets/mmr", default-features = false }
pallet-mmr-rpc = { path = "modules/pallets/mmr/rpc", default-features = false }
mmr-primitives = { path = "modules/pallets/mmr/primitives", default-features = false }
pallet-mmr-runtime-api = { path = "modules/pallets/mmr/runtime-api", default-features = false }
mmr-gadget = { path = "modules/pallets/mmr/gadget" }

# runtimes
gargantua-runtime = { path = "./parachain/runtimes/gargantua", default-features = false }
nexus-runtime = { path = "./parachain/runtimes/nexus", default-features = false }

# tesseract
tesseract-primitives = { path = "tesseract/primitives" }
tesseract-consensus = { path = "tesseract/consensus" }
tesseract-messaging = { path = "tesseract/messaging" }
tesseract-fisherman = { path = "tesseract/fisherman" }
tesseract-substrate = { path = "tesseract/substrate" }
tesseract-evm = { path = "tesseract/evm" }
tesseract = { path = "tesseract/relayer" }
transaction-fees = { path = "tesseract/fees" }
telemetry-server = { path = "tesseract/telemetry" }
tesseract-config = { path = "tesseract/config" }

[workspace.dependencies.codec]
package = "parity-scale-codec"
version = "3.6"
default-features = false
features = ["derive"]

[workspace.dependencies.ethabi]
version = "18.0.0"
default-features = false
features = ["rlp", "parity-codec"]

[workspace.dependencies.ethers]
git = "https://github.com/polytope-labs/ethers-rs"
rev = "45239225c50247e049892125d281442c084a2a92"
features = ["ethers-solc"]
default-features = false

[workspace.dependencies.ethers-core]
git = "https://github.com/polytope-labs/ethers-rs"
rev = "45239225c50247e049892125d281442c084a2a92"
default-features = false

[workspace.dependencies.ethers-contract-abigen]
git = "https://github.com/polytope-labs/ethers-rs"
rev = "45239225c50247e049892125d281442c084a2a92"

[workspace.dependencies.forge-testsuite]
git = "https://github.com/polytope-labs/forge-testsuite"
rev = "ff9fdc69c0200e3bb471198aa44ba933e043b78d"

[workspace.dependencies.foundry-evm]
git = "https://github.com/polytope-labs/foundry"
rev = "1db7f747d7033a760c747fabbeef706576c88e34"

[workspace.dependencies.merkle-mountain-range]
package = "ckb-merkle-mountain-range"
version = "0.5.2"
default-features = false

[workspace.dependencies.alloy-primitives]
version = "0.7.7"
default-features = false
features = ["rlp"]

[workspace.dependencies.scale-info]
version = "2.1.1"
default-features = false
features = ["derive"]

[workspace.dependencies.reconnecting-jsonrpsee-ws-client]
version = "0.4.2"
default-features = false
